# toml-span

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: rust-ci.yml
integ-tests/: Cargo.toml
integ-tests/data/: basic_arrays.toml  booleans.toml  evil.toml  flattened.toml  floats.toml  inline_tables.toml  integers.toml  key_names.toml  strings.toml  table_9_reverse_invalid.toml  table_9_reverse_valid.toml  table_names.toml  tables_in_arrays.toml  underscores.toml
integ-tests/src/: lib.rs
integ-tests/tests/: de.rs  parser.rs  tokens.rs  toml_test.rs  valid.rs
integ-tests/tests/snapshots/: de__basic_arrays.snap  de__basic_table.snap  de__custom_error.snap  de__flattened.snap  de__missing_required.snap  de__unknown_field.snap  parser__array_within_dotted-2.snap  parser__array_within_dotted.snap  parser__bad_booleans__false_trailing.snap  parser__bad_booleans__leading_f.snap  parser__bad_booleans__leading_t.snap  parser__bad_booleans__true_trailing.snap  parser__bad_codepoint.snap  parser__bad_floats__trailing_dec.snap  parser__bad_floats__trailing_exp.snap  parser__bad_floats__trailing_exp2.snap  parser__bad_floats__trailing_exp3.snap  parser__bad_floats__trailing_exp4.snap  parser__bad_floats__trailing_neg.snap  parser__bad_floats__trailing_pos.snap  parser__bad_inline_tables__duplicate_key.snap  parser__bad_inline_tables__eof.snap  parser__bad_inline_tables__newline.snap  parser__bad_inline_tables__only_comma.snap  parser__bad_inline_tables__trailing_comma.snap  parser__bad_keys__cr.snap  parser__bad_keys__dotted.snap  parser__bad_keys__empty_pipe.snap  parser__bad_keys__multi_line2.snap  parser__bad_keys__multi_line3.snap  parser__bad_keys__multi_line4.snap  parser__bad_keys__mutli_line.snap  parser__bad_keys__newline.snap  parser__bad_keys__newline2.snap  parser__bad_keys__newline3.snap  parser__bad_keys__newline_after_equal.snap  parser__bad_keys__none.snap  parser__bad_keys__pipe.snap  parser__bad_leading_zeros__neg_two_zeros.snap  parser__bad_leading_zeros__neg_with_dec.snap  (+154 more)
src/: de.rs  lib.rs  tokens.rs
toml-file/: Cargo.toml
toml-file-derive/: Cargo.toml
toml-file-derive/src/: de.rs  lib.rs
toml-file/src/: de.rs  de_helpers.rs  error.rs  lib.rs  span.rs  tokens.rs  value.rs
toml-file/src/value/: impl_serde.rs
toml-span/: CHANGELOG.md  Cargo.toml  README.md
toml-span/src/: de.rs  de_helpers.rs  error.rs  impl_serde.rs  lib.rs  span.rs  tokens.rs  value.rs
toml-span/src/value/: impl_serde.rs
