[package]
name = "integ-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
codespan-reporting = "0.11"
insta = { version = "1.34", features = ["json"] }
pretty_assertions = "1.4"
toml-span = { workspace = true, features = ["reporting", "serde"] }
