[package]
name = "integ-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
codespan-reporting = "0.12"
insta = { version = "1.34", features = ["json"] }
pretty_assertions = "1.4"
toml-span = { workspace = true, features = ["reporting", "serde"] }

[dev-dependencies]
toml-test-harness = "0.4"

[[test]]
name = "toml_test"
harness = false
