[package]
name = "integ-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
codespan-reporting.workspace = true
insta = { version = "1.34", features = ["json"] }
pretty_assertions = "1.4"
toml-span = { workspace = true, features = ["reporting", "serde"] }
