[package]
name = "toml-span"
version = "0.1.0"
description = "Toml parser and deserializer that preserves span information"
license = "Apache-2.0 OR MIT"
edition = "2021"

[features]
serde = ["dep:serde"]
reporting = ["dep:codespan-reporting"]

[dependencies]
codespan-reporting = { version = "0.11", optional = true }
serde = { version = "1.0", optional = true }
smallvec = "1.13"
